--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,6 +1,7 @@
 ---
-- hosts: all
-  become: yes
+- name: Test baseline role
+  hosts: all
+  become: true
   vars:
     hostname: dooopadoo
   roles:
